<resources>
    <string name="app_name">Food Runner</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account?Sign up now</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="welcome_to_the_home_page">Welcome to the Home Page</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="name_min_3_characters">Name (Min 3 Characters)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password(Min. 4 Characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="myProfile">My Profile</string>
    <string name="favouriteRestaurants">Favourite Restaurants</string>
    <string name="faqs">FAQs</string>
    <string name="logOut">Log Out</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="myProfile_fragment">My Profile Fragment</string>
    <string name="favouriteRestaurants_fragment">Favourite Restaurants Fragment</string>
    <string name="faqs_fragment">FAQs Fragment</string>
    <string name="name_of_the_restaurant">name of the Restaurant</string>
    <string name="rs_280_person">Rs.280/person</string>
    <string name="_4_1">4.1</string>
    <string name="no_fav">You do not have any favorite restaurants</string>
    <string name="order_history">Order History</string>


    <string name="preference_file_name">Login Preferences</string>
    <string name="preference_register">Register Preferences</string>
    <string name="enter_the_received_otp_below">enter the received OTP below</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="new_password_min_4_characters">New Password (Min. 4 Characters)</string>
    <string name="submit">Submit</string>
</resources>