<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/home" />

        <item
            android:id="@+id/myProfile"
            android:title="@string/myProfile"
            android:icon="@drawable/ic_baseline_person_24" />

        <item
            android:id="@+id/favouriteRestaurants"
            android:title="@string/favouriteRestaurants"
            android:icon="@drawable/ic_favouriterestaurants" />

        <item
            android:id="@+id/orderHistory"
            android:title="@string/order_history"
            android:icon="@drawable/ic_orderhistory"/>

        <item
            android:id="@+id/faqs"
            android:title="@string/faqs"
            android:icon="@drawable/ic_faqs" />

        <item
            android:id="@+id/logOut"
            android:title="@string/logOut"
            android:icon="@drawable/ic_logout" />
    </group>


</menu>