<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:weightSum="6">

        <ImageView
            android:id="@+id/restaurantImage"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_image"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_weight="3.3"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/restaurantName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_restaurant"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/restaurantPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rs_280_person"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:layout_below="@id/restaurantName"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/favouriteRedOutline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favouriteredoutline"
                android:layout_centerHorizontal="true"
                android:padding="8dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/restaurantRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:textColor="#FFC107"
                android:layout_below="@id/favouriteRedOutline"
                android:gravity="center"/>



        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>